@@ -10,7 +10,8 @@ This is rather free-form for now, but eventually this will be properly timestamp
         - Focus-locks on menus (share & screens)
         - Descriptive aria tags for interactive elements (buttons, toggles, seek bar)
         - Politely announced screen state changes for screen readers
-
+    * To do:
+        - Implement a "Skip to content" link. Browser requires a focusable element (a, button, etc.). Could use a focusable screen wrapper with an aria-label like "main content — screen {index} of {screens.length}" OR button jumps to first focusable element of screen if available
 
 2022-09-20 Fred Mercy <fred@folkloreinc.ca>
 
